# Ethics_by_Design

./: README.md  db.py  docker-compose.yml  email_service.py  main.py  migrate_add_is_approved.py  migrate_add_transcript_fields.py  pyproject.toml  transcription.py  web.py
frontend/: admin.html  admin_login.html  login.html  main.html  register.html
frontend/static/css/: admin.css  style.css
frontend/static/js/: auth.js
