[project]
name = "ethics-by-design"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.9.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "flask-login>=0.6.3",
    "authlib>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
